# Simple-Compiler-Parser

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  execute.cc  execute.h  export.sh  lexer.h  other.cc  other.h  parser.cc  parser.h  test1.sh  xander_tests.sh
my_tests/: custom_switch_test.txt  default_switch_test.txt  switch_test3.txt
provided_tests/__MACOSX/: ._test_control_i_if_f5.txt  ._test_control_while5.txt
tests/: CMakeLists.txt  tests.cc  tests.h
